objects/MaintenanceContractManagement__c.object
<CustomObject>
    <fields>
        <fullName>RenewalMonthFormula__c</fullName>
        <formula>IF (NOT ( ISNULL (PreviousYearOrder__c ) ), 
   LPAD(TEXT(YEAR(PreviousYearOrder__r.MaintenanceEndDateFormula__c)), 4, &apos;0&apos;) + LPAD(TEXT(MONTH(PreviousYearOrder__r.MaintenanceEndDateFormula__c)), 2, &apos;0&apos;), 
   IF (NOT ( ISNULL (UnitBody__r.EFEndDateFormula__c ) ), 
      LPAD(TEXT(YEAR(UnitBody__r.EFEndDateFormula__c)), 4, &apos;0&apos;) + LPAD(TEXT(MONTH(UnitBody__r.EFEndDateFormula__c)), 2, &apos;0&apos;), 
      LPAD(TEXT(1 + YEAR(UnitBody__r.ShippingDateFormula__c - 1)), 4, &apos;0&apos;) + LPAD(TEXT(MONTH(UnitBody__r.ShippingDateFormula__c - 1)), 2, &apos;0&apos;)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>更新月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalNoticeCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>更新案内作成</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalNoticeSentDate__c</fullName>
        <label>更新案内送付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RenewalOptionCustomerNameLabel__c</fullName>
        <label>お客様名/契約者様名</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RenewalOptionDateFormat__c</fullName>
        <label>西暦/和暦</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RenewalOptionHideChangeInfo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>更新エリアを隠す</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalPostalCode__c</fullName>
        <label>郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalPrintDate__c</fullName>
        <label>印刷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RenewalQuotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>更新案内見積書</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>QuotationInformation__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>PCS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QuotationInformation__c</referenceTo>
        <relationshipLabel>保守契約管理 (更新案内見積書)</relationshipLabel>
        <relationshipName>MCM_RenewalQuotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalTantoshya__c</fullName>
        <label>担当者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalTopSectionText__c</fullName>
        <defaultValue>&quot;なお、ご契約手続きにつきましては、お手数ですが、年間保守契約継続依頼書に必要事項をご記入の上、&quot; + BR() + &quot;ＦＡＸまたは郵送にてご返送いただければ幸いと存じます。 　 　 　 　 　 　 　 　 　 　 　 　 　 　 　敬具&quot;</defaultValue>
        <label>トップセクション</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalUndergraduate__c</fullName>
        <label>送付先（学部事業所）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAmountEstimateSum__c</fullName>
        <label>SalesAmountEstimateSum</label>
        <summarizedField>MaintenanceAccountBook__c.SalesAmountEstimate__c</summarizedField>
        <summaryFilterItems>
            <field>MaintenanceAccountBook__c.SalesReturn__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>MaintenanceAccountBook__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesReturnAmountReal__c</fullName>
        <label>SalesReturnAmountReal</label>
        <summarizedField>MaintenanceAccountBook__c.SalesAmountReal__c</summarizedField>
        <summaryFilterItems>
            <field>MaintenanceAccountBook__c.SalesReturn__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>MaintenanceAccountBook__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountCheck__c</fullName>
        <formula>NewOdrShipmentAccount__r.Code__c !=  UnitBody__r.DeliveryAccount__r.Code__c</formula>
        <label>出荷先チェック</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubAmountAttach__c</fullName>
        <label>台帳金額（アタッチ）</label>
        <summarizedField>MaintenanceAccountBook__c.SalesAmountEstimateAndReturn__c</summarizedField>
        <summaryFilterItems>
            <field>MaintenanceAccountBook__c.Type__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>MaintenanceAccountBook__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SubAmountHeliumRollup__c</fullName>
        <label>台帳金額（ヘリウム）</label>
        <summarizedField>MaintenanceAccountBook__c.SalesAmountEstimateAndReturn__c</summarizedField>
        <summaryFilterItems>
            <field>MaintenanceAccountBook__c.Type__c</field>
            <operation>equals</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryForeignKey>MaintenanceAccountBook__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SubAmountHelium__c</fullName>
        <label>台帳金額（ヘリウム）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubAmountHontaiInspec__c</fullName>
        <label>台帳金額（本体、点検あり）</label>
        <summarizedField>MaintenanceAccountBook__c.SalesAmountEstimateAndReturn__c</summarizedField>
        <summaryFilterItems>
            <field>MaintenanceAccountBook__c.Type__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>MaintenanceAccountBook__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SubAmountHontaiNoInspecRollup__c</fullName>
        <label>台帳金額（本体、点検無し）</label>
        <summarizedField>MaintenanceAccountBook__c.SalesAmountEstimateAndReturn__c</summarizedField>
        <summaryFilterItems>
            <field>MaintenanceAccountBook__c.Type__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>MaintenanceAccountBook__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SubAmountHontaiNoInspec__c</fullName>
        <label>台帳金額（本体、点検無し）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubmittedToAccounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>経理への注文書提出</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechnicalAlways1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Technical used for displaying automatically some filters in reports.
This field should always contain the value 1</description>
        <label>TechnicalAlways1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechnicalAlwaysFalse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to represent the checkboxes for Multiple Annai</description>
        <label>TechnicalAlwaysFalse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueKey2__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey2</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UnitBodyAcceptanceDateFormula__c</fullName>
        <formula>UnitBody__r.AcceptanceDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnitBodyEFEndDateFormula__c</fullName>
        <formula>UnitBody__r.EFEndDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体EF終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnitBodyLabel__c</fullName>
        <description>Updated in Before Upsert trigger only
Used for the Global Search</description>
        <label>UnitBodyLabel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBodyShippingDateFormula__c</fullName>
        <formula>UnitBody__r.ShippingDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体出荷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>保守契約管理</relationshipLabel>
        <relationshipName>MaintPipeline_UnitBody</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>VersionNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isHeliumOnly__c</fullName>
        <formula>AND (
   SubAmountHontaiInspec__c == 0,
   SubAmountHontaiNoInspecRollup__c == 0,
   SubAmountAttach__c == 0,
   SubAmountHeliumRollup__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isHeliumOnly</label>
        <type>Checkbox</type>
    </fields>
    <label>保守契約管理</label>
    <listViews>
        <fullName>EP1G_1T</fullName>
        <columns>NAME</columns>
        <columns>NewContractPeriod__c</columns>
        <columns>NewOdrSeries__c</columns>
        <columns>NewOdrShipmentAccount__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>UnitBody__c</columns>
        <columns>NewOdrSalesOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnitBody__c</field>
            <operation>startsWith</operation>
            <value>XM</value>
        </filters>
        <filters>
            <field>ProductNumber__c</field>
            <operation>startsWith</operation>
            <value>XM</value>
        </filters>
        <filters>
            <field>JEOLRegionName__c</field>
            <operation>contains</operation>
            <value>東京支店</value>
        </filters>
        <filters>
            <field>NewOdrMaintenanceEndDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/30/2017</value>
        </filters>
        <label>東京EP1G　1T</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>EP1G_T</fullName>
        <columns>NAME</columns>
        <columns>NewContractPeriod__c</columns>
        <columns>NewOdrSeries__c</columns>
        <columns>NewOdrShipmentAccount__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>UnitBody__c</columns>
        <columns>NewOdrTroubleshooting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnitBody__c</field>
            <operation>startsWith</operation>
            <value>AP,XP,TM</value>
        </filters>
        <filters>
            <field>ProductNumber__c</field>
            <operation>startsWith</operation>
            <value>AP,XP,TM</value>
        </filters>
        <filters>
            <field>JEOLRegionName__c</field>
            <operation>contains</operation>
            <value>東京支店</value>
        </filters>
        <filters>
            <field>NewOdrFiscalYear__c</field>
            <operation>contains</operation>
            <value>17</value>
        </filters>
        <label>東京EP1G　2T</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View_01</fullName>
        <columns>NAME</columns>
        <columns>UnitBody__c</columns>
        <columns>NewContractAmount__c</columns>
        <columns>NewOdrMaintenanceStartDate__c</columns>
        <columns>NewOdrMaintenanceEndDate__c</columns>
        <columns>PreviousYearOrder__c</columns>
        <columns>NewOdrSalesOrder__c</columns>
        <columns>Status__c</columns>
        <columns>PipelineStopped__c</columns>
        <columns>PipelineStoppedReason__c</columns>
        <columns>NewOdrSeries__c</columns>
        <columns>NewOdrRegion__c</columns>
        <columns>NewOdrOrderDate__c</columns>
        <columns>LinkBaaNStatus__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NewOdrMaintenanceType__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <label>確認用View</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_Infomation_System_G</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PLM-{00000000}</displayFormat>
        <label>Pipeline No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR01_PipelineStoppedReason</fullName>
        <active>true</active>
        <errorConditionFormula>PipelineStopped__c == ISBLANK(TEXT(PipelineStoppedReason__c))</errorConditionFormula>
        <errorDisplayField>PipelineStoppedReason__c</errorDisplayField>
        <errorMessage>「契約中止理由」の項目は「契約中止」がチェックされてるときしか使えません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR02_PipelineStoppedDate</fullName>
        <active>true</active>
        <errorConditionFormula>PipelineStopped__c == ISNULL(PipelineStoppedDate__c)</errorConditionFormula>
        <errorDisplayField>PipelineStoppedDate__c</errorDisplayField>
        <errorMessage>「契約中止日」の項目は「契約中止」がチェックされてるときしか使えません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR03_ContractImpossibleReason</fullName>
        <active>true</active>
        <errorConditionFormula>ContractImpossible__c == ISBLANK(ContractImpossibleReason__c)</errorConditionFormula>
        <errorDisplayField>ContractImpossibleReason__c</errorDisplayField>
        <errorMessage>「契約不可理由」の項目は「契約不可理由」がチェックされてるときしか使えません。</errorMessage>
    </validationRules>
</CustomObject>